mobile responsiveness discover width100%

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./bootstrap-5.0.2-dist/bootstrap-5.0.2-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./testing.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./fontawesome/fontawesome/css/font-awesome.min.css">
 
     <title>NFT's Project</title>
