--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./fontawesome/fontawesome/css/font-awesome.min.css">
 
-    <title>NFT's Project</title>
+    <title>NFT Project</title>
 </head>
 
 <body>
@@ -124,19 +124,19 @@
 
                 <div class="row box1">
 
-                    <div class="col-md-6 how-works">
+                    <div class="col-md-6 col-sm-23 how-works">
                         <h2>How it Works</h2>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi blanditiis placeat praesentium dicta consequatur tempore cum?</p>
                     </div>
 
-                    <div class="col-md-3 rectangle">
+                    <div class="col-md-3 col-sm-23 rectangle">
                         <img src="./imgs/Frame 176.png" alt="" width="100%">
                         <h4>Set Up Your Wallet</h4>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores, maxime.</p>
                     </div>
 
 
-                    <div class="col-md-3 rectangle">
+                    <div class="col-md-3 col-sm-12 rectangle">
                         <img src="./imgs/Frame 177.png" alt="" width="100%">
                         <h4>Buy Your Collection</h4>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. A, autem!</p>
@@ -147,17 +147,17 @@
 
                 <div class="row box2">
 
-                    <div class="col-md-6 learn-more">
+                    <div class="col-md-6 col-sm-12 learn-more">
                        <button class="learnmore-btn"> <a href="">Learn More</a></button>
                     </div>
                     
-                    <div class="col-md-3 rectangle">
+                    <div class="col-md-3 col-sm-12 rectangle">
                         <img src="./imgs/Frame 178.png" alt="" width="100%">
                         <h4>Sell Your NFTs</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, laboriosam.</p>
                     </div>
 
-                    <div class="col-md-3 rectangle">
+                    <div class="col-md-3 col-sm-12 rectangle">
                         <img src="./imgs/Frame 179.png" alt="" width="100%">
                         <h4>Add Your NFTs</h4>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, saepe?</p>
