container-fluid padding: mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </div>
 
     
-    <div class="container-fluid">
+    <div class="container-fluid how-worksbox">
 
                 <div class="row box1">
 
