--- a/index.html
+++ b/index.html
@@ -140,8 +140,96 @@
     8.Subscribe our newsletter
     9. Footer
  -->
+   
+     <section class="subscribe">
+        <div class="div1">
+            <aside>
+                <h1>Subscribe Our Newsletters</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisc elit amet ipsum dolor sit amet, consectetur adipisc elit.  Lorem ipsum dolor sit amet.</p>
 
+            <input type="text" placeholder="Enter your email...">
+            <button>Subscribe</button>
+            </aside>
+            <aside>
+                <img src="./imgs/image 91.png" alt="">
+            </aside>
+        </div>
 
+     </section>
+      <footer class="footer1">
+        <div class="footer-links">
+         <div>
+            <ul>
+                <li>
+                    <h4><a href="">Marketplace</a></h4>
+                </li>
+                <li>
+                    <a href="">All NFTs</a>
+                </li>
+                <li>
+                    <a href="">Art</a>
+                </li>
+                <li>
+                    <a href="">Music</a>
+                </li>
+                <li>
+                    <a href="">Domain Names</a>
+                </li>
+            </ul>
+         </div>
+         <div>
+            <ul>
+                <li>
+                   <h4><a href="">Resources</a></h4>
+                </li>
+                <li>
+                    <a href="">Home</a>
+                </li>
+                <li>
+                    <a href="">Partners</a>
+                </li>
+                <li>
+                    <a href="">Suggestions</a>
+                </li>
+                <li>
+                    <a href="">Discord</a>
+                </li>
+            </ul>
+         </div>
+         <div>
+            <ul>
+                <li>
+                    <h4><a href="">Community</a></h4>
+                </li>
+                <li>
+                    <a href="">About Us</a>
+                </li>
+                <li>
+                    <a href="">Documentation</a>
+                </li>
+                <li>
+                    <a href="">Brand Assets</a>
+                </li>
+                <li>
+                    <a href="">Blog</a>
+                </li>
+            </ul>
+         </div>
+         <div>
+            <ul>
+                <li>
+                     <h4><a href="">Newsletter</a></h4>
+                </li>
+                <li>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit amet.</p>
+                </li>
+            </ul>
+            <img src="./imgs/Frame 149.png" alt="">
+            <img src="./imgs/Frame 150.png" alt="">
+            <img src="./imgs/Frame 151.png" alt="">
+         </div>
+        </div>
+      </footer>
 
 
 
