subscribe input box/button

--- a/index.html
+++ b/index.html
@@ -193,9 +193,12 @@
             <aside>
                 <h1>Subscribe Our Newsletters</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisc elit amet ipsum dolor sit amet, consectetur adipisc elit.  Lorem ipsum dolor sit amet.</p>
-
-            <input type="text" placeholder="Enter your email...">
-            <button>Subscribe</button>
+            
+            <div class="email">
+                <input type="text" placeholder="Enter your email...">
+            <button>Subscribe</button> 
+            </div>
+             
             </aside>
             <aside>
                 <img src="./imgs/image 91.png" alt="">
@@ -205,7 +208,7 @@
      </section>
       <footer class="footer1">
         <div class="footer-links">
-         <div>
+         <div class="marketplace">
             <ul>
                 <li>
                     <h4><a href="">Marketplace</a></h4>
@@ -224,7 +227,7 @@
                 </li>
             </ul>
          </div>
-         <div>
+         <div class="Resources ">
             <ul>
                 <li>
                    <h4><a href="">Resources</a></h4>
@@ -243,7 +246,7 @@
                 </li>
             </ul>
          </div>
-         <div>
+         <div class="Community">
             <ul>
                 <li>
                     <h4><a href="">Community</a></h4>
@@ -262,7 +265,7 @@
                 </li>
             </ul>
          </div>
-         <div>
+         <div class="newsletter">
             <ul>
                 <li>
                      <h4><a href="">Newsletter</a></h4>
