client logo edit

--- a/index.html
+++ b/index.html
@@ -116,7 +116,26 @@
     </header>
     
     <div class="client-logo">
-        <img src="./imgs/Frame 123.png" alt="" width="100%">
+        <div class="amazon-logo">
+            <img src="./imgs/Amazon Logo.png" alt="">
+
+        </div>
+
+        <div class="slack-logo">
+            <img src="./imgs/Slack Logo.png" alt="">
+        </div>
+
+        <div class="paradigm-logo">
+            <img src="./imgs/Paradigm Logo.png" alt="">
+        </div>
+
+        <div class="chase-logo">
+            <img src="./imgs/Group 309.png" alt="">
+        </div>
+
+        <div class="binance-logo">
+            <img src="./imgs/Binance Logo.png" alt="">
+        </div>
     </div>
 
     
