footer paragraph/images

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 </li>
             </ul>
          </div>
-         <div class="Resources ">
+         <div class="resources ">
             <ul>
                 <li>
                    <h4><a href="">Resources</a></h4>
@@ -274,9 +274,12 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit amet.</p>
                 </li>
             </ul>
+            
+           <div class="images">
             <img src="./imgs/Frame 149.png" alt="">
             <img src="./imgs/Frame 150.png" alt="">
             <img src="./imgs/Frame 151.png" alt="">
+           </div>
          </div>
         </div>
       </footer>
