--- a/index.html
+++ b/index.html
@@ -117,24 +117,24 @@
     
     <div class="client-logo">
         <div class="amazon-logo">
-            <img src="./imgs/Amazon Logo.png" alt="">
+            <img src="./imgs/Amazon Logo.png" alt="" width="100%">
 
         </div>
 
         <div class="slack-logo">
-            <img src="./imgs/Slack Logo.png" alt="">
+            <img src="./imgs/Slack Logo.png" alt="" width="100%">
         </div>
 
         <div class="paradigm-logo">
-            <img src="./imgs/Paradigm Logo.png" alt="">
+            <img src="./imgs/Paradigm Logo.png" alt="" width="100%">
         </div>
 
         <div class="chase-logo">
-            <img src="./imgs/Group 309.png" alt="">
+            <img src="./imgs/Group 309.png" alt="" width="100%">
         </div>
 
         <div class="binance-logo">
-            <img src="./imgs/Binance Logo.png" alt="">
+            <img src="./imgs/Binance Logo.png" alt="" width="100%">
         </div>
     </div>
 
